src/test/ui/borrowck/borrowck-argument.stderr
error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-argument.rs:10:5
   |
LL | fn func(arg: S) {
   |         --- If I were you, I would simply consider changing this to be mutable: `mut arg`
LL |     arg.mutate();
   |     ^^^ cannot borrow as mutable

error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-argument.rs:15:9
   |
LL |     fn method(&self, arg: S) {
   |                      --- If I were you, I would simply consider changing this to be mutable: `mut arg`
LL |         arg.mutate();
   |         ^^^ cannot borrow as mutable

error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-argument.rs:21:9
   |
LL |     fn default(&self, arg: S) {
   |                       --- If I were you, I would simply consider changing this to be mutable: `mut arg`
LL |         arg.mutate();
   |         ^^^ cannot borrow as mutable

error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-argument.rs:32:17
   |
LL |     (|arg: S| { arg.mutate() })(s);
   |       ---       ^^^ cannot borrow as mutable
   |       |
   |       If I were you, I would simply consider changing this to be mutable: `mut arg`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0596`.
